<resources>
    <string name="app_name">Community</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="welcometext">Community</string>
    <string name="notice">Please login or register to access your community.</string>
    <string name="signin">sign in</string>
    <string name="register">Register</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="about">About CU</string>
    <string name="title_activity_register">register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">last name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="usernamereg">username</string>
    <string name="register_reg">Register</string>
    <string name="reglogin">Login</string>
    <string name="community_logo">Community logo</string>
    <string name="register_notice">Fill in the following spaces to register.</string>
    <string name="or_signin">Or Signin</string>
    <string name="connect_interact_vote_growth">Connect | Interact | Vote | Growth</string>
    <string name="background_image">background image</string>
    <string name="splashbackground">splashbackground</string>
    <string name="title_activity_splashfullscreen">splashfullscreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home">Home</string>
    <string name="compaign">Campaign</string>
    <string name="notification">notification</string>
    <string name="chat">Chat</string>
    <string name="profile">profile</string>
    <string name="news">News</string>
    <string name="feed">Feed</string>
    <string name="aboutinfotext">Community is an application developed by DhielSoft to help and communities around the world manage their legal voting system more fairly and easily.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.</string>
    <string name="abouttext">About</string>
    <string name="signinabout">SignIn</string>
    <string name="registerabout">register</string>
    <string name="browseAbout">Browse</string>
    <string name="forgot_password_text">Please enter your email address below and you\'ll recieve a code to create a new password.</string>
    <string name="send_fbcode">Send me the code</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_signin_fb">Or Signin</string>
    <string name="usernameProf">UserName</string>
    <string name="nyibol_magok">Nyibol Magok</string>
    <string name="on_now">ON Now</string>
    <string name="bola_post">Hello Community, i\'m here by to infor you that the election results will be posted on the community tomorrow. our officials are working on the clock to ensure that we all have a good night sleep. Also keep in mind that we\'ll go for compaign in nakuru on saturday. Peace guys.</string>
    <string name="michiPost">Damn, i love photography, Hey, community, wtach out for some awesome photoshoot for the compaigning team. peace</string>
    <string name="jimmy_falon">Jimmy Falon</string>
    <string name="jimmpost">Hey guys, I am compaigning for Chair of SAC @USIU - Africa. Please take a moment to look at my profile and vote.</string>
    <string name="bolapostfootbal">Hey guys, just a reminder, don\'t forgot to upvote the football field construction. peace.</string>
    <string name="mamuch_john">Mamuch John</string>
    <string name="off_2hr_ago">Off: 2Hr ago</string>
    <string name="on_2hr_ago">ON 2Hr ago</string>
    <string name="Community_Deskcription">Artistry, Potraits painting, writting and novelasm is what nyibol\'s Community is about</string>
    <string name="compeign_in_progress">compeign In Progress</string>
    <string name="Entity_type_community">Community</string>
    <string name="post_notice">Layout Design In The making</string>
</resources>
