<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.endurance.mamuch.communityu.AboutCu">

    <RelativeLayout
        android:layout_width="395dp"
        android:layout_height="643dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/AboutText"
            android:layout_width="wrap_content"
            android:textColor="@color/darkblue"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/abouttext"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/aboutInfoText"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/aboutinfotext"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_below="@+id/AboutText"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            app:srcCompat="@drawable/illust"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/linearLayout2"
            android:layout_above="@+id/btnBrowse"
            android:layout_alignStart="@+id/aboutInfoText"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btnBackLogin"
                android:layout_width="wrap_content"
                android:textColor="@color/plainWhite"
                android:layout_height="wrap_content"
                android:background="@drawable/signinback"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/signinabout" />

            <Button
                android:id="@+id/btnBackReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/regback"
                android:textColor="@color/plainWhite"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/registerabout" />

        </LinearLayout>

        <Button
            android:id="@+id/btnBrowse"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/helpbut"
            android:text="@string/browseAbout"
            android:layout_above="@+id/imageView4"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
