<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.endurance.mamuch.communityu.forgotpassword">

    <RelativeLayout
        android:layout_width="395dp"
        android:layout_height="643dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            app:srcCompat="@drawable/forgot_passsword" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/forgot_password"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:textAlignment="center"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp" />

        <EditText
            android:id="@+id/fpemail"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textView6"
            android:background="@drawable/inputbackground"
            android:hint="@string/enter_email_address"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="58dp"
            android:orientation="horizontal"
            android:layout_below="@+id/fpemail"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/backSignin"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/signinback"
                android:textColor="@color/plainWhite"
                android:layout_marginTop="12dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/or_signin_fb" />

            <Button
                android:id="@+id/sendCode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fpemail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="@drawable/regback"
                android:text="@string/send_fbcode"
                android:textColor="@color/plainWhite" />
        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
