<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollViewFeed"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:background="@color/lightgrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_height="380dp"
                android:background="@drawable/bola_profile_picture">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="bottom"
                    android:text="Nyibol's Comunity"
                    android:textAllCaps="false"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/plainWhite"
                    android:textSize="30dp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/Entity_type_community"
                    android:textColor="@color/plainWhite"
                    android:textSize="16dp"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/compeign_in_progress"
                    android:textColor="@color/LightGreen"
                    android:textSize="16dp"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Community_Deskcription"
                    android:textColor="@color/plainWhite"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp">

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/plainWhite"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/join_button_back"
                        android:text="Join" />

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/plainWhite"
                        android:background="@drawable/support_button_back"
                        android:text="Support" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/plainWhite"
                        android:background="@drawable/review_button_back"
                        android:layout_weight="1"
                        android:text="Review" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/compaigncardbackground"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/post_notice"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/compaigncardbackground"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/post_notice"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/compaigncardbackground"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/post_notice"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/compaigncardbackground"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/post_notice"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/post_notice"/>
</LinearLayout>